--- a/core/proxy.yaml
+++ b/core/proxy.yaml
@@ -42,7 +42,7 @@ spec:
         tier: proxy
     spec:
       containers:
-      - image: gameontext/gameon-proxy
+      - image: anthonyamanse/gameon-proxy
         name: proxy
         env:
           - name: service_map
@@ -52,9 +52,13 @@ spec:
           - name: service_simpleroom
             value : ws://simpleroom:9090/rooms
           - name: GITHUB_APP_ID
-            value : 'yourGitHubClientId'
+            value : '12'
           - name: GITHUB_APP_SECRET
-            value : 'yourGitHubClientSecret'
+            value : '1234'
+          - name: TWITTER_CONSUMER_KEY
+            value : '12'
+          - name: TWITTER_CONSUMER_SECRET
+            value : '1234'
           - name: MAP_SERVICE_URL
             value : http://127.0.0.1:6379/map/map/v1/sites
           - name: PLAYER_SERVICE_URL
