--- a/sample-rooms/swiftroom.yaml
+++ b/sample-rooms/swiftroom.yaml
@@ -1,24 +1,22 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: controller
+  name: swiftroom
   labels:
     app: gameon
 spec:
-  type: NodePort
   ports:
     - port: 8080
       protocol: TCP
       targetPort: 8080
-      nodePort: 31200
   selector:
     app: gameon
-    tier: controller
+    tier: swiftroom
 ---
 apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
-  name: controller
+  name: swiftroom
   labels:
     app: gameon
 spec:
@@ -28,18 +26,17 @@ spec:
     metadata:
       labels:
         app: gameon
-        tier: controller
+        tier: swiftroom
     spec:
       containers:
-      - image: amalgam8/a8-controller
-        name: controller
-        env:
-        - name: A8_LOG_LEVEL
-          value: info
-        - name: A8_DATABASE_TYPE
-          value: redis
-        - name: A8_DATABASE_HOST
-          value: redis://redis:6379
+      - image: anthonyamanse/sample-room-swift:3.0
+        name: swiftroom
         ports:
         - containerPort: 8080
-          name: controller
+        volumeMounts:
+        - name: keystore
+          mountPath: /opt/ibm/wlp/usr/servers/defaultServer/resources/security
+      volumes:
+      - name: keystore
+        persistentVolumeClaim:
+          claimName: keystore-claim
