--- a/platform/registry.yaml
+++ b/platform/registry.yaml
@@ -37,7 +37,7 @@ spec:
         - name: A8_STORE
           value: redis
         - name: A8_STORE_ADDRESS
-          value: redis:6379
+          value: $(REDIS_SERVICE_HOST):$(REDIS_SERVICE_PORT)
         ports:
         - containerPort: 8080
           name: registry
