--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: bash
 script: true
 sudo: required
 before_install:
-- bash scripts/install.sh
+- travis wait bash scripts/install.sh
 group: stable
 dist: precise
 os: linux
