--- a/core/player.yaml
+++ b/core/player.yaml
@@ -1,3 +1,4 @@
+---
 apiVersion: v1
 kind: Service
 metadata:
@@ -42,175 +43,176 @@ spec:
         tier: player
     spec:
       containers:
-      - image: gameontext/gameon-player
-        name: player
-        env:
-          - name: service_map
-            valueFrom:
-              configMapKeyRef:
-                name: gameon-env
-                key: service_map
-          - name: service_room
-            valueFrom:
-              configMapKeyRef:
-                name: gameon-env
-                key: service_room
-          - name: service_simpleroom
-            valueFrom:
-              configMapKeyRef:
-                name: gameon-env
-                key: service_simpleroom
-          - name: GITHUB_APP_ID
-            valueFrom:
-              configMapKeyRef:
-                name: gameon-env
-                key: GITHUB_APP_ID
-          - name: GITHUB_APP_SECRET
-            valueFrom:
-              configMapKeyRef:
-                name: gameon-env
-                key: GITHUB_APP_SECRET
-          - name: TWITTER_CONSUMER_KEY
-            valueFrom:
-              configMapKeyRef:
-                name: gameon-env
-                key: TWITTER_CONSUMER_KEY
-          - name: TWITTER_CONSUMER_SECRET
-            valueFrom:
-              configMapKeyRef:
-                name: gameon-env
-                key: TWITTER_CONSUMER_SECRET
-          - name: MAP_SERVICE_URL
-            valueFrom:
-              configMapKeyRef:
-                name: gameon-env
-                key: MAP_SERVICE_URL
-          - name: PLAYER_SERVICE_URL
-            valueFrom:
-              configMapKeyRef:
-                name: gameon-env
-                key: PLAYER_SERVICE_URL
-          - name: COUCHDB_SERVICE_URL
-            valueFrom:
-              configMapKeyRef:
-                name: gameon-env
-                key: COUCHDB_SERVICE_URL
-          - name: KAFKA_SERVICE_URL
-            valueFrom:
-              configMapKeyRef:
-                name: gameon-env
-                key: KAFKA_SERVICE_URL
-          - name: FRONT_END_PLAYER_URL
-            valueFrom:
-              configMapKeyRef:
-                name: gameon-env
-                key: FRONT_END_PLAYER_URL
-          - name: FRONT_END_SUCCESS_CALLBACK
-            valueFrom:
-              configMapKeyRef:
-                name: gameon-env
-                key: FRONT_END_SUCCESS_CALLBACK
-          - name: FRONT_END_FAIL_CALLBACK
-            valueFrom:
-              configMapKeyRef:
-                name: gameon-env
-                key: FRONT_END_FAIL_CALLBACK
-          - name: FRONT_END_AUTH_URL
-            valueFrom:
-              configMapKeyRef:
-                name: gameon-env
-                key: FRONT_END_AUTH_URL
-          - name: GAMEON_MODE
-            valueFrom:
-              configMapKeyRef:
-                name: gameon-env
-                key: GAMEON_MODE
-          - name: TARGET_PLATFORM
-            valueFrom:
-              configMapKeyRef:
-                name: gameon-env
-                key: TARGET_PLATFORM
-          - name: SYSTEM_ID
-            valueFrom:
-              configMapKeyRef:
-                name: gameon-env
-                key: SYSTEM_ID
-          - name: LICENSE
-            valueFrom:
-              configMapKeyRef:
-                name: gameon-env
-                key: LICENSE
-          - name: PROXY_DOCKER_HOST
-            valueFrom:
-              configMapKeyRef:
-                name: gameon-env
-                key: PROXY_DOCKER_HOST
-          - name: ADMIN_PASSWORD
-            valueFrom:
-              configMapKeyRef:
-                name: gameon-env
-                key: ADMIN_PASSWORD
-          - name: WLP_SKIP_MAXPERMSIZE
-            valueFrom:
-              configMapKeyRef:
-                name: gameon-env
-                key: WLP_SKIP_MAXPERMSIZE
-          - name: WLP_OUTPUT_DIR
-            valueFrom:
-              configMapKeyRef:
-                name: gameon-env
-                key: WLP_OUTPUT_DIR
-          - name: LOG_DIR
-            valueFrom:
-              configMapKeyRef:
-                name: gameon-env
-                key: LOG_DIR
-          - name: MAP_KEY
-            valueFrom:
-              configMapKeyRef:
-                name: gameon-env
-                key: MAP_KEY
-          - name: COUCHDB_USER
-            valueFrom:
-              configMapKeyRef:
-                name: gameon-env
-                key: COUCHDB_USER
-          - name: COUCHDB_PASSWORD
-            valueFrom:
-              configMapKeyRef:
-                name: gameon-env
-                key: COUCHDB_PASSWORD
-          - name: A8_REGISTRY_URL
-            valueFrom:
-              configMapKeyRef:
-                name: gameon-env
-                key: A8_REGISTRY_URL
-          - name: A8_CONTROLLER_URL
-            valueFrom:
-              configMapKeyRef:
-                name: gameon-env
-                key: A8_CONTROLLER_URL
-          - name: A8_CONTROLLER_POLL
-            valueFrom:
-              configMapKeyRef:
-                name: gameon-env
-                key: A8_CONTROLLER_POLL
-          - name: A8_CONTROLLER_POLL
-            valueFrom:
-              configMapKeyRef:
-                name: gameon-env
-                key: A8_CONTROLLER_POLL
-        ports:
-        - containerPort: 4201
-          name: player-1
-        - containerPort: 9080
-          name: player-2
-        - containerPort: 9443
-          name: player-3
-        volumeMounts:
-        - name: keystore
-          mountPath: /opt/ibm/wlp/usr/servers/defaultServer/resources/security
+        - image: gameontext/gameon-player
+          name: player
+          env:
+            - name: service_map
+              valueFrom:
+                configMapKeyRef:
+                  name: gameon-env
+                  key: service_map
+            - name: service_room
+              valueFrom:
+                configMapKeyRef:
+                  name: gameon-env
+                  key: service_room
+            - name: service_simpleroom
+              valueFrom:
+                configMapKeyRef:
+                  name: gameon-env
+                  key: service_simpleroom
+            - name: GITHUB_APP_ID
+              valueFrom:
+                configMapKeyRef:
+                  name: gameon-env
+                  key: GITHUB_APP_ID
+            - name: GITHUB_APP_SECRET
+              valueFrom:
+                configMapKeyRef:
+                  name: gameon-env
+                  key: GITHUB_APP_SECRET
+            - name: TWITTER_CONSUMER_KEY
+              valueFrom:
+                configMapKeyRef:
+                  name: gameon-env
+                  key: TWITTER_CONSUMER_KEY
+            - name: TWITTER_CONSUMER_SECRET
+              valueFrom:
+                configMapKeyRef:
+                  name: gameon-env
+                  key: TWITTER_CONSUMER_SECRET
+            - name: MAP_SERVICE_URL
+              valueFrom:
+                configMapKeyRef:
+                  name: gameon-env
+                  key: MAP_SERVICE_URL
+            - name: PLAYER_SERVICE_URL
+              valueFrom:
+                configMapKeyRef:
+                  name: gameon-env
+                  key: PLAYER_SERVICE_URL
+            - name: COUCHDB_SERVICE_URL
+              valueFrom:
+                configMapKeyRef:
+                  name: gameon-env
+                  key: COUCHDB_SERVICE_URL
+            - name: KAFKA_SERVICE_URL
+              valueFrom:
+                configMapKeyRef:
+                  name: gameon-env
+                  key: KAFKA_SERVICE_URL
+            - name: FRONT_END_PLAYER_URL
+              valueFrom:
+                configMapKeyRef:
+                  name: gameon-env
+                  key: FRONT_END_PLAYER_URL
+            - name: FRONT_END_SUCCESS_CALLBACK
+              valueFrom:
+                configMapKeyRef:
+                  name: gameon-env
+                  key: FRONT_END_SUCCESS_CALLBACK
+            - name: FRONT_END_FAIL_CALLBACK
+              valueFrom:
+                configMapKeyRef:
+                  name: gameon-env
+                  key: FRONT_END_FAIL_CALLBACK
+            - name: FRONT_END_AUTH_URL
+              valueFrom:
+                configMapKeyRef:
+                  name: gameon-env
+                  key: FRONT_END_AUTH_URL
+            - name: GAMEON_MODE
+              valueFrom:
+                configMapKeyRef:
+                  name: gameon-env
+                  key: GAMEON_MODE
+            - name: TARGET_PLATFORM
+              valueFrom:
+                configMapKeyRef:
+                  name: gameon-env
+                  key: TARGET_PLATFORM
+            - name: SYSTEM_ID
+              valueFrom:
+                configMapKeyRef:
+                  name: gameon-env
+                  key: SYSTEM_ID
+            - name: LICENSE
+              valueFrom:
+                configMapKeyRef:
+                  name: gameon-env
+                  key: LICENSE
+            - name: PROXY_DOCKER_HOST
+              valueFrom:
+                configMapKeyRef:
+                  name: gameon-env
+                  key: PROXY_DOCKER_HOST
+            - name: ADMIN_PASSWORD
+              valueFrom:
+                configMapKeyRef:
+                  name: gameon-env
+                  key: ADMIN_PASSWORD
+            - name: WLP_SKIP_MAXPERMSIZE
+              valueFrom:
+                configMapKeyRef:
+                  name: gameon-env
+                  key: WLP_SKIP_MAXPERMSIZE
+            - name: WLP_OUTPUT_DIR
+              valueFrom:
+                configMapKeyRef:
+                  name: gameon-env
+                  key: WLP_OUTPUT_DIR
+            - name: LOG_DIR
+              valueFrom:
+                configMapKeyRef:
+                  name: gameon-env
+                  key: LOG_DIR
+            - name: MAP_KEY
+              valueFrom:
+                configMapKeyRef:
+                  name: gameon-env
+                  key: MAP_KEY
+            - name: COUCHDB_USER
+              valueFrom:
+                configMapKeyRef:
+                  name: gameon-env
+                  key: COUCHDB_USER
+            - name: COUCHDB_PASSWORD
+              valueFrom:
+                configMapKeyRef:
+                  name: gameon-env
+                  key: COUCHDB_PASSWORD
+            - name: A8_REGISTRY_URL
+              valueFrom:
+                configMapKeyRef:
+                  name: gameon-env
+                  key: A8_REGISTRY_URL
+            - name: A8_CONTROLLER_URL
+              valueFrom:
+                configMapKeyRef:
+                  name: gameon-env
+                  key: A8_CONTROLLER_URL
+            - name: A8_CONTROLLER_POLL
+              valueFrom:
+                configMapKeyRef:
+                  name: gameon-env
+                  key: A8_CONTROLLER_POLL
+            - name: A8_CONTROLLER_POLL
+              valueFrom:
+                configMapKeyRef:
+                  name: gameon-env
+                  key: A8_CONTROLLER_POLL
+          ports:
+            - containerPort: 4201
+              name: player-1
+            - containerPort: 9080
+              name: player-2
+            - containerPort: 9443
+              name: player-3
+          volumeMounts:
+            - name: keystore
+              mountPath: >-
+                /opt/ibm/wlp/usr/servers/defaultServer/resources/security
       volumes:
-      - name: keystore
-        persistentVolumeClaim:
-          claimName: keystore-claim
+        - name: keystore
+          persistentVolumeClaim:
+            claimName: keystore-claim
