Fix images used for core deployment
Images from gameontext dockerhub repo removed images that were using amalgam8 sidecars.

This fix replaces the image in the deployment to use built images from old source that are still using a8 sidecars.

The gameon-proxy configuration is also modified to use kubernetes service names and port for core services.

Local volume is configured for PersistentVolumeClaim to use user-created PersistentVolume.

--- a/containers/gameon-proxy/haproxy-dev.cfg
+++ b/containers/gameon-proxy/haproxy-dev.cfg
@@ -34,7 +34,7 @@ frontend logstash-lumberjack
   default_backend logstash-lumberjack
 
 frontend frontend-ssl
-  bind *:443 ssl crt /keystore/proxy.pem
+  bind *:443 ssl crt /etc/ssl/proxy.pem
   mode http
   option httplog
 
@@ -94,7 +94,7 @@ backend room
   option httplog
   option httpchk HEAD / HTTP/1.1\r\nHost:localhost
   balance roundrobin
-  server room1 PLACEHOLDER_DOCKERHOST:30980 check
+  server room1 room:9080 check
 
 backend roomjs
   mode http
@@ -107,33 +107,33 @@ backend map
   option httplog
   option httpchk GET /map/v1/health HTTP/1.1\r\nHost:localhost
   balance roundrobin
-  server map1 PLACEHOLDER_DOCKERHOST:30947 ssl check check-ssl verify none
+  server map1 map:9443 ssl check check-ssl verify none
 
 backend mediator
   mode http
   option httplog
   balance roundrobin
-  server mediator1 PLACEHOLDER_DOCKERHOST:30946 ssl check check-ssl verify none
+  server mediator1 mediator:9443 ssl check check-ssl verify none
 
 backend auth
   mode http
   option httplog
   option httpchk GET /auth/health HTTP/1.1\r\nHost:localhost
   balance roundrobin
-  server auth1 PLACEHOLDER_DOCKERHOST:30949 ssl check check-ssl verify none
+  server auth1 auth:9443 ssl check check-ssl verify none
 
 backend player
   mode http
   option httplog
   balance roundrobin
-  server player1 PLACEHOLDER_DOCKERHOST:30943 ssl check check-ssl verify none
+  server player1 player:9443 ssl check check-ssl verify none
 
 backend static-content
   mode http
   option httpchk HEAD / HTTP/1.1\r\nHost:localhost
   option httplog
   balance roundrobin
-  server webapp1 PLACEHOLDER_DOCKERHOST:30880 check inter 1m
+  server webapp1 webapp:8080 check inter 1m
 
 backend logstash-lumberjack
   mode tcp
